--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
     <div class="footer-container">
         <footer class="wrapper">
-            <h3>2019 &copy; <a href="https://dev-josegomez.firebaseapp.com/" target="_blank">Dev José Gómez</a> | <a href="mailto:devjosegomez+generation@gmail.com" target="_blank">Contact me.</a></h3>
+            <h3>2019 &copy; <a href="https://dev-josegomez.firebaseapp.com/" target="_blank">Dev José Gómez</a> | <a href="mailto:@gmail.com" target="_blank">Contact me.</a></h3>
         </footer>
     </div>
 
